--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<ul class="site-navigation">
 				<li><a href="catalog.html">Каталог</a>
 				<ul class="catalog-navigation">
-					<li><a href="#">Новинки</a></li>
+					<li class="catalog-novelties"><a href="#">Новинки</a></li>
 					<li><a href="#">Сливочное</a></li>
 					<li><a href="#">Щербеты</a></li>
 					<li><a href="#">Фруктовый лед</a></li>
@@ -27,36 +27,46 @@
 			</ul>
 			<ul class="user-navigation">
 				<li class="search">
-					<p class="search-icon"><span class="visually-hidden">Поиск</span></p>
-					<div class="search-popup">
-						<form class="form-search">
-							<input type="text" name="search-field" placeholder="Что ищем?">
+					<p class="search-icon">
+						<span class="visually-hidden">
+							<a href="#" class="button">Поиск</a>
+						</span></p>
+					<div class="header-popup">
+						<form class="form-search" action="https://echo.htmlacademy.ru" method="get" name="form-search">
+							<label for="search-field">Поиск</label>
+							<input type="text" name="search-field" id="search-field" placeholder="Что ищем?"><button class="button visually-hidden" type="submit">Поиск</button>
 						</form>
 					</div>
 				</li>
 				<li class="profile">
-					<p class="profile-icon">Вход</p>
-					<div class="profile-popup">
-						<form class="form-profile">
-							<input type="email" name="email-field" placeholder="Электронная почта">
-							<input type="password" name="password-field" placeholder="Пароль">
+					<p class="profile-icon">
+						<a href="#" class="button">Вход</a>
+					</p>
+					<div class="header-popup">
+						<form class="form-profile" action="https://echo.htmlacademy.ru" method="get" name="form-profile">
+							<label for="email-field">Электронная почта</label>
+							<input type="email" name="email-field" id="email-field" placeholder="Электронная ">
+							<label for="password-field">Пароль</label>
+							<input type="password" name="password-field" id="password-field" placeholder="Пароль">
+							<button class="button" type="submit">Войти</button>
+							<p class="profile-support">
+								<a href="#">Забыли пароль?</a>
+								<a href="#">Новая регистрация</a>
+							</p>
 						</form>
-						<p class="profile-button">
-							<a href="#" class="button">Войти</a>
-						</p>
-						<p class="profile-support">
-							<a href="#">Забыли пароль?</a>
-							<a href="#">Новая регистрация</a>
-						</p>
 					</div>
 				</li>
 				<li class="cart">
-					<p class="cart-status">Пусто</p>
+					<p class="cart-status">
+						<a href="#" class="button">Пусто</a>
+					</p>
 				</li>
 			</ul>
 		</nav>
-		<p class="working-hours">С 10 до 20, ежедневно</p>
-        <p class="contact-number">8 812 450-25-25</p>
+		<div class="working-information">
+			<p class="working-hours">С 10 до 20, ежедневно</p>
+        	<p class="working-number">8 812 450-25-25</p>
+		</div>		
 		</div>
 	</header>
 
@@ -65,6 +75,9 @@
 
 		<div class="container">
 			<div class="production-slider">
+				<input type="radio" name="toggle" checked>
+          		<input type="radio" name="toggle">
+          		<input type="radio" name="toggle">
 				<ul class="production-list">
 					<li class="production-item">
 						<p class="production-offer">Крем-брюле и пломбир с малиновым джемом</p>
@@ -107,46 +120,74 @@
 				</ul>				
 			</section>
 
-			<section class="bestsellers">
+			<section class="catalog">
 				<h2 class="visually-hidden">Хиты продаж</h2>
-				<ul class="bestsellers-list">
-					<li class="bestsellers-item">
-						<figure class="bestsellers-image">
-							<img src="#" width="100" height="100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+				<ul class="catalog-list">
+					<li class="catalog-item">
+						<figure class="catalog-image">
+							<a href="#">
+								<img src="#" width="100" height="100" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+							</a>
+							<a href="#">
+								<img src="#" width="20" height="20" alt="Хит продаж">
+							</a>
 						</figure>
-						<p class="bestsellers-price">310 Р/кг</p>
-						<p class="bestsellers-description">Сливочное с апельсиновым джемом и цитрусовой стружкой</p>
-						<p class="bestsellers-qwickview">
+						<p class="catalog-price">310 Р/кг</p>
+						<p class="catalog-description">
+							<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+						</p>
+						<p class="catalog-qwickview">
 							<a href="#" class="button">Быстрый просмотр</a>
 						</p>
 					</li>
-					<li class="bestsellers-item">
-						<figure class="bestsellers-image">
-							<img src="#" width="100" height="100" alt="Сливочно-кофейное с кусочками шоколада">
+					<li class="catalog-item">
+						<figure class="catalog-image">
+							<a href="#">
+								<img src="#" width="100" height="100" alt="Сливочно-кофейное с кусочками шоколада">
+							</a>
+							<a href="#">
+								<img src="#" width="20" height="20" alt="Хит продаж">
+							</a>
 						</figure>
-						<p class="bestsellers-price">380 Р/кг</p>
-						<p class="bestsellers-description">Сливочно-кофейное с кусочками шоколада</p>
-						<p class="bestsellers-qwickview">
+						<p class="catalog-price">380 Р/кг</p>
+						<p class="catalog-description">
+							<a href="#">Сливочно-кофейное с кусочками шоколада</a>
+						</p>
+						<p class="catalog-qwickview">
 							<a href="#" class="button">Быстрый просмотр</a>
 						</p>
 					</li>
-					<li class="bestsellers-item">
-						<figure class="bestsellers-image">
-							<img src="#" width="100" height="100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+					<li class="catalog-item">
+						<figure class="catalog-image">
+							<a href="#">
+								<img src="#" width="100" height="100" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+							</a>
+							<a href="#">
+								<img src="#" width="20" height="20" alt="Хит продаж">
+							</a>
 						</figure>
-						<p class="bestsellers-price">355 Р/кг</p>
-						<p class="bestsellers-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
-						<p class="bestsellers-qwickview">
+						<p class="catalog-price">355 Р/кг</p>
+						<p class="catalog-description">
+							<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+						</p>
+						<p class="catalog-qwickview">
 							<a href="#" class="button">Быстрый просмотр</a>
 						</p>
 					</li>
-					<li class="bestsellers-item">
-						<figure class="bestsellers-image">
-							<img src="#" width="100" height="100" alt="Сливочное крем-брюле с карамельной подливкой">
+					<li class="catalog-item">
+						<figure class="catalog-image">
+							<a href="#">
+								<img src="#" width="100" height="100" alt="Сливочное крем-брюле с карамельной подливкой">
+							</a>
+							<a href="#">
+								<img src="#" width="20" height="20" alt="Хит продаж">
+							</a>
 						</figure>
-						<p class="bestsellers-price">415 Р/кг</p>
-						<p class="bestsellers-description">Сливочное крем-брюле с карамельной подливкой</p>
-						<p class="bestsellers-qwickview">
+						<p class="catalog-price">415 Р/кг</p>
+						<p class="catalog-description">
+							<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+						</p>
+						<p class="catalog-qwickview">
 							<a href="#" class="button">Быстрый просмотр</a>
 						</p>
 					</li>
@@ -154,16 +195,15 @@
 			</section>
 
 			<section class="about-us">
-				<h2 class="visually-hidden">О нас</h2>
-				<p class="about-us-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+				<h2 class="about-us-title">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>				
 				<ul class="about-us-list">
-					<li class="about-us-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
+					<li>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.
 					</li>
-					<li class="about-us-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+					<li>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
 					</li>
-					<li class="about-us-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+					<li>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
 					</li>
-					<li class="about-us-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+					<li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
 					</li>
 				</ul>
 			</section>
@@ -172,7 +212,7 @@
 				<h2 class="visually-hidden">Наш блог</h2>
 				<p class="blog-title">Новое в нашем блоге</p>
 				<p class="blog-description">
-					<a href="#">10 способов сервировкифруктовых щербетов к столу</a>
+					<a href="#">10 способов сервировки фруктовых щербетов к столу</a>
 				</p>	
 			</article>
 
@@ -181,26 +221,27 @@
 				<p class="newsletters-description">
 					Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) 
 				</p>
-				<form action="#" method="post">
-					<input type="text" name="email" placeholder="Электронная почта">
-					<input class="email-submition" type="submit" name="subscription" value="Отправить">
+				<form class="form-email" action="#" action="https://echo.htmlacademy.ru" method="get" name="form-email">
+					<label for="email">Электронная почта</label>
+					<input id="email" type="text" name="email" placeholder="Электронная почта">
+					<button class="button" type="submit">Отправить</button>
 				</form>
 			</section>
 
 			<section class="contacts">
-				<h2 class="visually-hidden">Как до нас добраться</h2>
-				<div class="map"></div>
+				<h2 class="visually-hidden">Как до нас добраться</h2>				
 				<div class="contacts-info">
 					<p class="contacts-address-title">
 						Адрес главного офиса и офлайн-магазина: <span class="contacts-address">ул. Большая Конюшенная 19/8, Санкт-Петербург</span>
 					</p>
 					<p class="contacts-phone-title">
-						Для заказов по телефону: <span class="contacts-phone">8 812 450-25-25</span> (с 10 до 20 ежедневно)
+						Для заказов по телефону: <span class="contacts-phone"><a href="tel">8 812 450-25-25</a></span> (с 10 до 20 ежедневно)
 					</p>
 					<p class="feedback">
 						<a href="#" class="button">Форма обратной связи</a>
 					</p>
 				</div>
+				<div class="map"></div>
 			</section>
 		</div>
 	</main>
@@ -231,7 +272,7 @@
 			</ul>
 
 			<ul class="additional-information">
-				<li>
+				<li class="additional-information-suppliers">
 					<a href="#">Для поставщиков</a>
 				</li>
 				<li>
@@ -246,22 +287,22 @@
 			</ul>
 
 			<div class="site-developer">
-				<img src="#" width="100" height="100" alt="Логотип разработчика сайта">
-				<p>Сделано в HTML Academy © 2017</p>
+				<a href="https://htmlacademy.ru/"><img src="#" width="100" height="100" alt="Логотип разработчика сайта"></a>
+				<a href="https://htmlacademy.ru/"><p>Сделано в HTML Academy © 2017</p></a>
 			</div>
 		</div>
 	</footer>
 </body>
 
 <div class="container-popup">
-	<form class="form-write-us" action="#" method="post">
-		<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
-		<fieldset class="write-us-frame">
-			<legend class="write-us">Мы обязательно вам ответим!</legend>
-			<input type="text" name="name" placeholder="Как вас зовут?">
-			<input type="email" name="email" placeholder="Ваша почта для ответа?">
-			<textarea rows="6">Напишите что-нибудь...</textarea>
-		</fieldset>
+	<button class="modal-close" type="button"><span class="visually-hidden">Закрыть</span></button>
+	<legend class="write-us">Мы обязательно вам ответим!</legend>	
+	<form class="form-write-us" action="https://echo.htmlacademy.ru" method="post" name="form-write-us">
+			<label for="write-us-name">Ваше имя</label>	
+			<input type="text" name="name" id="write-us-name" placeholder="Как вас зовут?">
+			<label for="write-us-email">Ваш email</label>
+			<input type="email" name="email" id="write-us-email" placeholder="Ваша почта для ответа?">
+			<textarea rows="6" placeholder="Напишите что-нибудь..."></textarea>		
 		<button class="button" type="submit">Отправить</button>
 	</form>
 	
